@@ -30,99 +30,6 @@
 #include "libdali.h"
 
 /***********************************************************************/ /**
- * @brief Parse/split a string on a specified delimiter
- *
- * Splits a 'string' on 'delim' and puts each part into a linked list
- * pointed to by 'list' (a pointer to a pointer).  The last entry has
- * it's 'next' set to 0.  All elements are NULL terminated strings.
- *
- * It is up to the caller to free the memory associated with the
- * returned list.  To facilitate freeing this special string list
- * dl_strparse() can be called with both 'string' and 'delim' set to
- * NULL and then the linked list is traversed and the memory used is
- * free'd and the list pointer is set to NULL.
- *
- * @param string String to parse/split
- * @param delim Delimiter to split string on
- * @param list Returned list of sub-strings.
- *
- * @return The number of elements added to the list, or 0 when freeing
- * the linked list.
- ***************************************************************************/
-int
-dl_strparse (const char *string, const char *delim, DLstrlist **list)
-{
-  const char *beg; /* beginning of element */
-  const char *del; /* delimiter */
-  int stop  = 0;
-  int count = 0;
-  int total;
-
-  DLstrlist *curlist = 0;
-  DLstrlist *tmplist = 0;
-
-  if (string != NULL && delim != NULL)
-  {
-    total = strlen (string);
-    beg   = string;
-
-    while (!stop)
-    {
-
-      /* Find delimiter */
-      del = strstr (beg, delim);
-
-      /* Delimiter not found or empty */
-      if (del == NULL || strlen (delim) == 0)
-      {
-        del  = string + strlen (string);
-        stop = 1;
-      }
-
-      tmplist       = (DLstrlist *)malloc (sizeof (DLstrlist));
-      tmplist->next = 0;
-
-      tmplist->element = (char *)malloc (del - beg + 1);
-      strncpy (tmplist->element, beg, (del - beg));
-      tmplist->element[(del - beg)] = '\0';
-
-      /* Add this to the list */
-      if (count++ == 0)
-      {
-        curlist = tmplist;
-        *list   = curlist;
-      }
-      else
-      {
-        curlist->next = tmplist;
-        curlist       = curlist->next;
-      }
-
-      /* Update 'beg' */
-      beg = (del + strlen (delim));
-      if ((beg - string) > total)
-        break;
-    }
-
-    return count;
-  }
-  else
-  {
-    curlist = *list;
-    while (curlist != NULL)
-    {
-      tmplist = curlist->next;
-      free (curlist->element);
-      free (curlist);
-      curlist = tmplist;
-    }
-    *list = NULL;
-
-    return 0;
-  }
-} /* End of dl_strparse() */
-
-/***********************************************************************/ /**
  * @brief Copy a string while removing space charaters
  *
  * Copy @a length characters from @a source to @a dest while removing
